<resources>
    <string name="panel_title">Camera</string>
    <string name="hd">HD</string>
    <string name="sd">SD</string>
    <string name="other">Other</string>
    <string name="speak">Speak</string>
    <string name="snapshot">Snapshot</string>
    <string name="record">Record</string>
    <string name="replay">Replay</string>
    <string name="cloud_video">Cloud video</string>
    <string name="message">Message</string>
    <string name="settings">Settings</string>
    <string name="device_info">Device info</string>
    <string name="get_clarity">Get clarity</string>
    <string name="playback_title">Playback</string>
    <string name="doorbell_title">Doorbell Call</string>
    <string name="playback_input_hint">Input query date: </string>
    <string name="query">Query</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="message_title">Detection Alarm</string>
    <string name="info_title">Device Info</string>
    <string name="low_power">is low power: </string>
    <string name="video_num">video num: </string>
    <string name="default_definition">default definition: </string>
    <string name="is_support_speaker">is support speaker: </string>
    <string name="is_support_picK_up">is support pick up: </string>
    <string name="is_support_talk">is support talk back mode up: </string>
    <string name="default_talk_mode">default talk back mode: </string>
    <string name="support_speed">support playback speed: </string>
    <string name="raw_data">raw data: </string>
    <string name="settings_title">Settings</string>
    <string name="cloud_video_title">Cloud Video</string>
    <string name="download">Download</string>
    <string name="duration">Duration: </string>
    <string name="record_start">Start record</string>
    <string name="record_stop">Stop record</string>
    <string name="cloud_status">Cloud Storage Status</string>
    <string name="buy">Buy Cloud Storage</string>
    <string name="query_cloud">1. Query Cloud Storage Data</string>
    <string name="query_cloud_of_day">2. Query Appoint Time Data</string>
    <string name="download_suc">Download success</string>
    <string name="operation_failed">Operation failed</string>
    <string name="no_data">No data for query date</string>
    <string name="connect_first">Please connect device first</string>
    <string name="input_err">Input error</string>
    <string name="operation_suc">Operation success</string>
    <string name="connect_failed">Connect failed</string>
    <string name="not_support">Unsupported</string>
    <string name="format_status">format status: </string>
    <string name="not_input_query_data">Input query date</string>
    <string name="get_current_clarity">Current video clarity is: </string>
    <string name="not_support_device">The device is not supported</string>
    <string name="err_code">Status value: </string>
    <string name="current_state">Current state: </string>
    <string name="ipc_doorbell_refuse">Refuse</string>
    <string name="ipc_doorbell_hangup">Hang up</string>
    <string name="ipc_doorbell_accept">Accept</string>
    <string name="menu_remove_device">Remove Device</string>
    <string name="remove_device_dialog">Are you sure remove this device？</string>
    <string name="confirm">Confirm</string>
    <string name="cloud_start">3. Start</string>
    <string name="ipc_debug_tool">DEBUG TOOL</string>
    <string name="ipc_cloud_debug_tools">Cloud storage debugging tool</string>
    <string name="ipc_ptz">PTZ</string>
    <string name="ipc_close">Close</string>
    <string name="ipc_not_support_ptz">Not support PTZ</string>
    <string name="ipc_ptz_control">PTZ Control</string>
    <string name="ipc_left">LEFT</string>
    <string name="ipc_top">TOP</string>
    <string name="ipc_right">RIGHT</string>
    <string name="ipc_bottom">BOTTOM</string>
    <string name="ipc_focal_length">Focal length</string>
    <string name="ipc_increase">increase</string>
    <string name="ipc_reduce">reduce</string>
    <string name="ipc_collection_point">Collection point</string>
    <string name="ipc_add">ADD</string>
    <string name="ipc_delete">DELETE</string>
    <string name="ipc_cruise">cruise</string>
    <string name="ipc_cruise_mode">cruise mode</string>
    <string name="ipc_cruise_time">cruise time</string>
    <string name="ipc_tracking">Mobile tracking</string>
    <string name="ipc_preset_point">Preset point</string>
    <string name="ipc_panoramic_cruise">Panoramic cruise</string>
    <string name="ipc_collection_point_cruise">Collection point cruise</string>
    <string name="ipc_full_day_cruise">Full day cruise</string>
    <string name="ipc_custom_cruise">Custom cruise</string>
    <string name="ipc_sdk_autotest_tools">IPC SDK automated test tool</string>
    <string name="ipc_sdk_service_running">running</string>
    <string name="ipc_sdk_service_expired">expired</string>
    <string name="ipc_sdk_no_service">no service</string>
</resources>