<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_view"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/cloud_video_title"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <RelativeLayout
        android:id="@+id/camera_video_view_Rl"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_below="@id/toolbar_view">

        <com.tuya.smart.camera.middleware.widget.TuyaCameraView
            android:id="@+id/camera_cloud_video_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/camera_mute"
            android:layout_width="@dimen/wh_28"
            android:layout_height="@dimen/wh_28"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:src="@drawable/camera_mute_btn" />

    </RelativeLayout>

    <TextView
        android:id="@+id/status_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/camera_video_view_Rl"
        android:layout_marginLeft="@dimen/mg_10"
        android:layout_marginRight="@dimen/mg_10"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/query_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_tv"
        android:layout_marginLeft="@dimen/mg_10"
        android:layout_marginRight="@dimen/mg_10"
        android:text="@string/query_cloud"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dateRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/query_btn"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"></androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/timeRv"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom"
        android:layout_below="@+id/dateRv"></androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            >

            <Button
                android:id="@+id/pause_btn"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pause"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/resume_btn"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resume"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/stop_btn"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="10dp"
            android:paddingLeft="10dp">

            <Button
                android:id="@+id/snapshot_btn"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/snapshot"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/record_start"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/record_start"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/record_end"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/record_stop"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>