<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_view"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/panel_title"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <LinearLayout
        android:id="@+id/query_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_view"
        android:orientation="horizontal"
        android:padding="@dimen/mg_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playback_input_hint"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/date_input_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="2019/11/12"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="15sp" />
    </LinearLayout>


    <Button
        android:id="@+id/query_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/query_ll"
        android:layout_marginLeft="@dimen/mg_10"
        android:layout_marginRight="@dimen/mg_10"
        android:text="@string/query"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/query_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/query_btn"
        android:layout_marginLeft="@dimen/mg_10"
        android:layout_marginRight="@dimen/mg_10" />

</RelativeLayout>